@@ -1,13 +1,0 @@
-(c) Copyright 1986-2000, Kim Jung-Hwan
-
-You are hereby granted permission under all Kim Jung-Hwan propriety rights
-to use, copy, modify, sublicense, sell, and redistribute the 4 Baekmuk
-truetype outline fonts for any purpose and without restriction;
-provided, that this notice is left intact on all copies of such fonts
-and that Kim Jung-Hwan's trademark is acknowledged as shown below
-on all copies of the 4 Baekmuk truetype fonts.
-
-BAEKMUK BATANG is a registered trademark of Kim Jung-Hwan.
-BAEKMUK GULIM is a registered trademark of Kim Jung-Hwan.
-BAEKMUK DOTUM is a registered trademark of Kim Jung-Hwan.
-BAEKMUK HEADLINE is a registered trademark of Kim Jung-Hwan.
